[tool.poetry]
name = "dca"
version = "0.1.0"
license = "MIT"
description = "Official implementation of Delaunay Component Analysis algorithm for evaluation of data representations."
readme = "README.md"
authors = ["Petra Poklukar"]

[tool.poetry.dependencies]
python = "3.7.10"
numpy = "^1.20.3"
matplotlib = "^3.4.2"
pydantic = "^1.8.2"
networkx = "^2.5"
umap-learn = "^0.5.1"
hdbscan = "0.8.27"
typer = "^0.3.2"
typing = "^3.7.4.3"
pandas = "^1.1.3"
scikit-learn = "^1.0"

[tool.poetry.dev-dependencies]
black = "21.10b0"
pylint = "^2.10.2"
pytest = "^6.2.5"

[tool.pyright]
venv = ".venv"